tests/baselines/reference/parserConstructorDeclaration7.errors.txt
==== tests/cases/compiler/parserConstructorDeclaration7.ts (1 errors) ====
    class C {
      public private constructor() { }
             ~~~~~~~
!!! parserConstructorDeclaration7.ts(2,10): error TS1028: Accessibility modifier already seen.
    }